--- a/css/fondation.css
+++ b/css/fondation.css
@@ -18,7 +18,7 @@ body {
     height: 100%;
     margin-bottom: 80px;
     font-family: Agency FB,微軟正黑體;
-    background-image:url(/img/index_background.jpg);
+    background-image:url(../img/index_background.jpg);
 }
 
 #main {
