--- a/css/blog.css
+++ b/css/blog.css
@@ -6,7 +6,7 @@
     text-align: center;
     padding: 1px;
     height: 100px;
-    background-image: url(/img/blog/welcom.jpg);
+    background-image: url(../img/blog/welcom.jpg);
 }
 
 .blog-welcome h1{
@@ -18,7 +18,7 @@
 .blog-slogan {
     text-align: center;
     padding: 1px;
-    background-image: url(/img/blog/slogan.jpg);
+    background-image: url(../img/blog/slogan.jpg);
     height: 150px;
 }
 
