--- a/css/contact.css
+++ b/css/contact.css
@@ -11,13 +11,13 @@
 .contact-welcome {
     padding: 1px;
     height: 200px;
-    background-image: url(/img/contact.jpg);
+    background-image: url(../img/contact.jpg);
     opacity: 0.7;
 }
 
 .contact-slogan {
     padding: 1px;
-    background-image: url(/img/index_background.jpg);
+    background-image: url(../img/index_background.jpg);
     height: 250px;
 }
 
