--- a/dev/scss/_work.scss
+++ b/dev/scss/_work.scss
@@ -47,23 +47,23 @@
                 background-size: cover;
 
                 &.cook {
-                    background-image: url(/images/work_cook.jpg);
+                    background-image: url(../images/work_cook.jpg);
                 }
 
                 &.escape {
-                    background-image: url(/images/work_escape.jpg);
+                    background-image: url(../images/work_escape.jpg);
                 }
 
                 &.wallet {
-                    background-image: url(/images/work_wallet.jpg);
+                    background-image: url(../images/work_wallet.jpg);
                 }
 
                 &.gaming {
-                    background-image: url(/images/work_gaming.jpg);
+                    background-image: url(../images/work_gaming.jpg);
                 }
 
                 &.graphic {
-                    background-image: url(/images/work_graphic.jpg);
+                    background-image: url(../images/work_graphic.jpg);
                 }
             }
 
