--- a/dev/scss/_contact.scss
+++ b/dev/scss/_contact.scss
@@ -6,7 +6,7 @@
         text-align: center;
         background-position: center;
         background-size: cover;
-        background-image: url(/images/contact_welcome.jpg);
+        background-image: url(../images/contact_welcome.jpg);
         color: white;
 
         &:after {
@@ -32,7 +32,7 @@
         text-align: center;
         background-position: center;
         background-size: cover;
-        background-image: url(/images/contact_description.jpg);
+        background-image: url(../images/contact_description.jpg);
         padding: 50px 0;
         color: white;
 
