--- a/dev/scss/_nav.scss
+++ b/dev/scss/_nav.scss
@@ -12,7 +12,7 @@
     float: left;
     width: 60px;
     height: 60px;
-    background-image: url(/images/common_logo.png);
+    background-image: url(../images/common_logo.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
