--- a/dev/scss/index.scss
+++ b/dev/scss/index.scss
@@ -38,7 +38,7 @@ section {
 
 .home {
     height: 100%;
-    background-image: url(/images/common_background.jpg);
+    background-image: url(../images/common_background.jpg);
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: cover;
